--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
 <script src="JQuery/jquery-3.6.0.min.js"></script>
 <script src="JS/slick.min.js"></script>
-<script src="jS/script.js"></script>
+<script src="JS/script.js"></script>
 </body>
 
 
