--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <div class="lesson">
                         <a href="#">
                             <span>учимся</span>
-                            <img src="../img/logo.svg" alt="logo">
+                            <img src="img/logo.svg" alt="logo">
                             <span class="logo-green">Онлайн</span>
                         </a>
                     </div>
@@ -41,7 +41,7 @@
                     <div class="lesson">
                         <a href="#">
                             <span>учимся</span>
-                            <img src="../img/logo.svg" alt="logo">
+                            <img src="img/logo.svg" alt="logo">
                             <span class="logo-blue">Онлайн</span>
                         </a>
                     </div>
@@ -67,7 +67,7 @@
                     <div class="lesson">
                         <a href="#">
                             <span>учимся</span>
-                            <img src="../img/logo.svg" alt="logo">
+                            <img src="img/logo.svg" alt="logo">
                             <span class="logo-purple">Онлайн</span>
                         </a>
                     </div>
@@ -93,7 +93,7 @@
         <div class="main-flex">
             <div class="flex-column">
                 <div class="profession">
-                    <img src="../img/profession.svg" alt="Получите профессию">
+                    <img src="img/profession.svg" alt="Получите профессию">
                     <h2>Получите <span>профессию</span>
                     </h2>
                     <div class="description">Базовые курсы для изучения новой сферы или профессии — с практикой и
@@ -103,7 +103,7 @@
             </div>
             <div class="flex-column">
                 <div class="career">
-                    <img src="../img/career.svg" alt="Растите в профессии">
+                    <img src="img/career.svg" alt="Растите в профессии">
                     <h2>Растите <br>
                         <span>в профессии</span>
                     </h2>
@@ -114,7 +114,7 @@
             </div>
             <div class="flex-column">
                 <div class="development ">
-                    <img src="../img/development.svg" alt="Управляйте эффективно">
+                    <img src="img/development.svg" alt="Управляйте эффективно">
                     <h2>Управляйте <span>эффективно</span>
                     </h2>
                     <div class="description">Курсы для руководителей, чтобы научиться эффективно решать сложные задачи в
@@ -152,7 +152,7 @@
             <div class="lesson">
                 <a href="#">
                     <span>учимся</span>
-                    <img src="../img/logo.svg" alt="logo">
+                    <img src="img/logo.svg" alt="logo">
                     <span>Онлайн</span>
                 </a>
             </div>
